# lunaria

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
shaders/: render.frag  render.vert
src/: compiler.cpp  engine.cpp  engine.h  main.cpp  renderer.cpp  renderer.h  window.cpp  window.h
src/rendering/: renderer.cpp  renderer.h
src/resource/: asset.h  modelasset.cpp  modelasset.h  resourceman.cpp  resourceman.h
src/utils/: math.cpp  math.h  polyvector.h  transform3d.cpp  transform3d.h
src/world/: component.cpp  component.h  entity.cpp  entity.h  system.h  world.cpp  world.h
src/world/components/: modelComponent.cpp  modelComponent.h
src/world/entities/: modelEntity.cpp  modelEntity.h
src/world/systems/: renderingSystem.cpp  renderingSystem.h
